==> MissouriMRDT/BMS_Software/libraries/RoveBoard/msp432p401r_API/RoveUart/HardwareSerial.cpp <==
#include <stdlib.h>
#include <stdio.h>
#include <string.h>
#include <inttypes.h>
#include "HardwareSerial.h"
#include "../Clocking/Clocking_MSP432P401R.h"
#include "../msp432Ware/inc/msp.h"
#include "../RovePinMap_MSP432P401R.h"
#define TX_BUFFER_EMPTY    (txReadIndex == txWriteIndex)
#define TX_BUFFER_FULL     (((txWriteIndex + 1) % txBufferSize) == txReadIndex)
#define RX_BUFFER_EMPTY    (rxReadIndex == rxWriteIndex)
#define RX_BUFFER_FULL     (((rxWriteIndex + 1) % rxBufferSize) == rxReadIndex)
#define UART_CLOCK_FREQ    CS_getSMCLK()
#define UART_CLOCK_SOURCE  EUSCI_A_UART_CLOCKSOURCE_SMCLK
#define UART_INTERRUPTS    EUSCI_A_UART_TRANSMIT_INTERRUPT | EUSCI_A_UART_RECEIVE_INTERRUPT
#define UART_BASE g_ulUARTBase[uartModule]

void
HardwareSerial::primeTransmit()
{
  //
  // Do we have any data to transmit?
  //
  if(!TX_BUFFER_EMPTY)
  {
    //
    // Disable the UART interrupt. If we don't do this there is a race
    // condition which can cause the read index to be corrupted.
    //
    UART_disableInterrupt(UART_BASE, UART_INTERRUPTS);

    //
    // Yes - take some characters out of the transmit buffer and feed
    // them to the UART transmit FIFO.
    //
    //UART_transmitData(UART_BASE, txBuffer[txReadIndex]); for some reason the driverlib function fails
    EUSCI_A_CMSIS(UART_BASE)->TXBUF = txBuffer[txReadIndex];
    txReadIndex = (txReadIndex + 1) % txBufferSize;

    //
    // Reenable the UART interrupt.
    //
    UART_enableInterrupt(UART_BASE, UART_INTERRUPTS);

    transmitting = true;
  }
  else
  {
    transmitting = false;
  }
}

void
HardwareSerial::begin(unsigned long baud, uint8_t txPin, uint8_t rxPin)
{
  //set pins
  GPIO_setAsPeripheralModuleFunctionInputPin(pinToPinPort[txPin], pinToPinMask[txPin], GPIO_PRIMARY_MODULE_FUNCTION);
  GPIO_setAsPeripheralModuleFunctionInputPin(pinToPinPort[rxPin], pinToPinMask[rxPin], GPIO_PRIMARY_MODULE_FUNCTION);

  //setup uart module
  configureForBaud(baud);
  UART_initModule(UART_BASE, &config);

  switch(UART_BASE)
  {
    case EUSCI_A0_BASE:
      UART_registerInterrupt(UART_BASE, UARTIntHandler0);
      break;

    case EUSCI_A1_BASE:
      UART_registerInterrupt(UART_BASE, UARTIntHandler1);
      break;

    case EUSCI_A2_BASE:
      UART_registerInterrupt(UART_BASE, UARTIntHandler2);
      break;
  case EUSCI_A3_BASE:
      UART_registerInterrupt(UART_BASE, UARTIntHandler3);
      break;
  }

  // Catch attempts to re-init this Serial instance by freeing old buffer first
  if (txBuffer != (unsigned char *)0xFFFFFFFF || rxBuffer != (unsigned char *)0xFFFFFFFF)
  {
    delete txBuffer;
    delete rxBuffer;
  }

  txBuffer = new unsigned char [txBufferSize];
  rxBuffer = new unsigned char [rxBufferSize];

  //
  // Set the UART to interrupt whenever a character is transmitted or when any character is received.
  //
  flushAll();
  UART_enableInterrupt(UART_BASE, UART_INTERRUPTS);

  //
  // Enable the UART operation.
  //
  UART_enableModule(UART_BASE);

  int i;
  for(i = 0; i < 100; i++);
}

void HardwareSerial::end()
{
  unsigned long ulInt = Interrupt_disableMaster();

  flushAll();

  //
  // If interrupts were enabled when we turned them off, turn them
  // back on again.
  //
  if(!ulInt)
  {
    Interrupt_enableMaster();
  }

  UART_disableInterrupt(UART_BASE, UART_INTERRUPTS);

  UART_disableModule(UART_BASE);
}

void HardwareSerial::UARTIntHandler(void)
{
  uint32_t ulInts;
  uint8_t lChar;

  //
  // Get and clear the current interrupt source(s)
  //
  ulInts = UART_getInterruptStatus(UART_BASE, UART_INTERRUPTS);
  UART_clearInterruptFlag(UART_BASE, ulInts);

  // Are we being interrupted because the TX FIFO has space available?
  //
  if(ulInts & EUSCI_A_UART_TRANSMIT_INTERRUPT_FLAG)
  {
    //
    // If the output buffer is empty, turn off the transmit interrupt. It will get re-enabled
    // when the user calls another write function
    //
    if(TX_BUFFER_EMPTY)
    {
      UART_disableInterrupt(UART_BASE, EUSCI_A_UART_TRANSMIT_INTERRUPT);
      transmitting = false;

      //
      // Transmit is finished, to run user transmit callback functions
      //
      uint8_t i;
      for(i = 0; i < MaxCallbacks; i++)
      {
        if(transmitCbFuncs[i])
        {
          transmitCbFuncs[i](uartModule);
        }
      }
    }

    //
    // Transmit another byte
    //
    else
    {
      primeTransmit();
    }
  }

  //Did we receive something?
  if(ulInts & EUSCI_A_UART_RECEIVE_INTERRUPT_FLAG)
  {
    //
    // Read a character
    //
    lChar = UART_receiveData(UART_BASE);

    //
    // If there is space in the receive buffer, put the character
    // there, otherwise throw it away. Run user receive callbacks
    //
    uint8_t volatile full = RX_BUFFER_FULL;
    if(!full)
    {
      rxBuffer[rxWriteIndex] = lChar;
      rxWriteIndex = ((rxWriteIndex) + 1) % rxBufferSize;

      uint8_t i;
      for(i = 0; i < MaxCallbacks; i++)
      {
        if(receiveCbFuncs[i])
        {
          receiveCbFuncs[i](uartModule);
        }
      }
    }
  }
}
